--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,12 +24,20 @@
     <string name="daftar_sampah">Daftar Sampah</string>
     <string name="title_list_sampah">Title List Sampah</string>
     <string name="desc_list_sampah">Kami menerima semua %1$s atau sejenis tergolong.</string>
-    <string name="point_reward_count">+ %1$d Poin</string>
-    <string name="total_point">0 Poin</string>
+    <string name="point_reward_count">+%1$s Poin</string>
+    <string name="point_minus_count">-%1$s Poin</string>
+    <string name="total_point">%1$s Poin</string>
     <string name="no_hp">Nomor Telepon</string>
     <string name="title_history">Title History</string>
     <string name="waiting_driver">Waiting Driver</string>
     <string name="date">17.30, 20 April 202</string>
     <string name="history">History</string>
     <string name="point_history">Point History</string>
+    <string name="title_profile_head">My Profile</string>
+    <string name="logout">Logout</string>
+    <string name="loading">Loading…</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="msg_empty">You no have data</string>
+    <string name="photo">Photo Item</string>
 </resources>
