--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="no_hp">Nomor Telepon</string>
     <string name="title_history">Title History</string>
     <string name="waiting_driver">Waiting Driver</string>
-    <string name="date">17.30, 20 April 202</string>
+    <string name="date">%1$s</string>
     <string name="history">History</string>
     <string name="point_history">Point History</string>
     <string name="title_profile_head">My Profile</string>
@@ -38,6 +38,14 @@
     <string name="loading">Loading…</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="msg_empty">You no have data</string>
+    <string name="msg_empty">Data masih kosong</string>
     <string name="photo">Photo Item</string>
+    <string name="title_camera_head">Foto Sampah</string>
+    <string name="click_image">Klik gambar untuk membuka kamera</string>
+    <string name="title_trash_name">Nama sampah</string>
+    <string name="title_trash_quantity">Jumlah sampah</string>
+    <string name="submit_trash">Jual sekarang</string>
+    <string name="thank_you">Terima kasih!</string>
+    <string name="desc_success_submit">Mohon menunggu, kurir akan segera\nke tempat Anda.</string>
+    <string name="btn_on_success">OK siap!</string>
 </resources>
